<resources>
    <string name="app_name">Accept Goods 5</string>
    <string name="scan_action">Scan</string>
    <string name="storeman_label">Storeman</string>
    <string name="store_choice">Chose store</string>
    <string name="storeman_number_tts">Enter storeman number, press Enter</string>
    <string name="input_cell_label">Input cell</string>
    <string name="wrong_cell">Wrong cell number</string>
    <string name="wrong_goods">Wrong goods code</string>
    <string name="finish">Finish scan</string>
    <string name="output_cell">Cell</string>
    <string name="goods_code">Goods code</string>
    <string name="upload_deferred">Network offline, upload deferred</string>
    <string name="scan_box">Scan box</string>
    <string name="scan_goods">Scan goods</string>
    <string name="scan_cell">Scan cell</string>
    <string name="goods_label">Goods</string>
    <string name="qty">Quantity</string>
    <string name="placed">Placed in cell</string>
    <string name="repeat_scan">Repeat scan, confirm other cell</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="other_cell">Other cell?</string>
    <string name="force_upload">Go to WiFi zone and press Upload</string>
    <string name="upload">Upload data</string>
    <string name="cell">Cell</string>
    <string name="ready">Finish data download</string>
    <string name="qnt">Enter goods quantity, press Enter</string>
    <string name="wrong_qnt">Wrong goods quantity</string>
    <string name="exit">Exit</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Store</string>
    <string name="close_scan">Close scan?</string>
    <string name="close_settings">Close settings?</string>
    <string name="error">Error!</string>
    <string name="enter_again">Enter again</string>
    <string name="dismiss">Dismiss</string>
    <string name="search">Search</string>
    <string name="goods_choice">Chose goods</string>
    <string name="fast_scan">Fast scan</string>
    <string name="regular_scan">Regular scan</string>
    <string name="scan_mode">Scan mode</string>
    <string name="scan_goods_or_cell">Scan goods or cell</string>
    <string name="quantity">pieces</string>
    <string name="address">Address </string>
    <string name="not_set">Not set</string>
    <string name="cancel">Cancel</string>
    <string name="accepted">Accepted</string>
    <string name="next">Next</string>
    <string name="no_connection">No server connection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="to_accept">To be accepted</string>
    <string name="accepted_to_cell">accepted to cell</string>
    <string name="accepted_of"> of </string>
    <string name="have_scanned_cell">Cell was scanned</string>
    <string name="dct_num">DCT number</string>
    <string name="clear_data">Clear data</string>
    <string name="device_id">Device ID</string>
    <string name="sd_card_error">SD card write error</string>
    <string name="no_sd_card">Insert SD card</string>
    <string name="new_version">Update to new version</string>
    <string name="edit_data">Edit data?</string>
    <string name="clear">Clear</string>
    <string name="finish_accept">Finish accept</string>
    <string name="to_send">"To send "</string>
    <string name="positions">" позиций"</string>
    <string name="printer">Printer</string>
    <string name="print_label">Print label</string>
    <string name="printer_choice">Chose printer</string>
    <string name="adb_label">Label</string>
    <string name="qnt_labels">Labels quantity</string>
    <string name="goods_in_label">Goods quantity</string>
    <string name="price_label">Price label</string>
    <string name="price_disclaimer1">Check price</string>
    <string name="price_disclaimer2">on terminal</string>
    <string name="price_label2">Price</string>
    <string name="rub" translatable="false">" Руб."</string>
    <string name="enterprise">Server</string>
    <string name="comtt">Komtrans</string>
    <string name="truckex" translatable="false">Truck Expert</string>
</resources>
