<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item android:id="@+id/refresh_item"
        app:showAsAction="ifRoom"
        android:title="@string/refresh"  />
    <item android:id="@+id/settings_item"
        app:showAsAction="never"
        android:title="@string/settings"  />
    <item android:id="@+id/dct_num_item"
        app:showAsAction="never"
        android:title="@string/dct_num"  />
    <item android:id="@+id/clear_item"
        app:showAsAction="never"
        android:title="@string/clear_data"  />
    <item android:id="@+id/device_item"
        app:showAsAction="never"
        android:title="@string/device_id"  />
    <item
        android:id="@+id/printer_item"
        app:showAsAction="ifRoom"
        android:title="@string/printer" />
    <item android:id="@+id/print_price"
        app:showAsAction="ifRoom"
        android:title="@string/price_label"  />
    <item android:id="@+id/print_label"
        app:showAsAction="ifRoom"
        android:title="@string/print_label"  />
    <item android:id="@+id/enterprise_item"
        app:showAsAction="never"
        android:title="@string/enterprise"/>
</menu>
