<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:weightSum="13"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tvStore"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="20sp"
        />
    <LinearLayout
        android:layout_weight="1.5"
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:weightSum="5"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/textview_first"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/storeman_label"
            android:textSize="24sp"
            android:layout_weight="4"
            />

        <EditText
            android:id="@+id/et_storeman"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            android:lines="1"
            android:textSize="24sp" />
    </LinearLayout>
    <EditText
        android:id="@+id/etScan"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:lines="1"
        android:layout_weight="1.5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="6"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/goods_label"
            android:layout_weight="2" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:id="@+id/tvGoods"
            android:layout_weight="4" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:textSize="20sp"
        android:id="@+id/tvDescription"
        android:layout_weight="2" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:weightSum="6"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/cell"
            android:layout_weight="2" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:id="@+id/tvCell"
            android:layout_weight="4" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:weightSum="3"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/qty"
            android:layout_weight="2" />
        <EditText
            android:layout_width="0dp"
            android:enabled="false"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:id="@+id/etQty"
            android:layout_weight="1" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:id="@+id/tvPrompt"
        android:layout_weight="1"
        android:textSize="24sp"
        android:textAlignment="center"/>
    <ProgressBar
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/pbbar" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:id="@+id/btCancel"
        android:text="@string/cancel" />
</LinearLayout>